<resources>
    <string name="app_name">QRCodeReaderLib</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log IN</string>
    <string name="login_as_user">login as user</string>
    <string name="login_as_admin">login as admin</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit_data">Submit</string>
    <string name="click_here_to_scan_data">Click Here To Scan Barcode</string>
    <string name="description">Description</string>
    <string name="successfull_login">Successfully Login</string>
    <string name="invalid_user">Invalid User!</string>
</resources>
