<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/activity_admin_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

    <FrameLayout
        android:layout_width="@dimen/two_hundred_dp"
        android:layout_height="@dimen/two_hundred_dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbarView"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/rounded_corner_transparent_bg">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/clickToScanTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/click_here_to_scan_data"
            android:padding="@dimen/ten_dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp">

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white_full"
            android:drawablePadding="@dimen/five_dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:padding="@dimen/ten_dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />


        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@drawable/rounded_corner_white_full"
            android:drawablePadding="@dimen/five_dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/ten_dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@drawable/rounded_corner_white_full"
            android:drawablePadding="@dimen/five_dp"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:padding="@dimen/ten_dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/dobTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@drawable/rounded_corner_white_full"
            android:drawablePadding="@dimen/five_dp"
            android:hint="@string/enter_date_of_birth"
            android:inputType="number"
            android:padding="@dimen/ten_dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/submitBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/two_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/ten_dp"
            android:text="@string/submit_data"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />
    </LinearLayout>
</RelativeLayout>
